// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LabelItems renders empty 1`] = `
<div>
  <div
    class="sc-EHOje ggEejq"
  >
    <h5
      class="sc-ifAKCX oCshM"
    >
      Node Labels
    </h5>
    <div
      class="sc-bZQynM hxqGOu"
    >
      <p>
        There are no labels in database
      </p>
    </div>
  </div>
</div>
`;

exports[`LabelItems renders labels 1`] = `
<div>
  <div
    class="sc-EHOje ggEejq"
  >
    <h5
      class="sc-ifAKCX oCshM"
    >
      Node Labels
    </h5>
    <div
      class="sc-bZQynM hxqGOu"
    >
      <div
        class="sc-gqjmRU sc-VigVT dvKSlR"
        data-testid="sidebarMetaItem"
      >
        *
      </div>
      <div
        class="sc-gqjmRU sc-VigVT dvKSlR"
        data-testid="sidebarMetaItem"
      >
        MyLabel
      </div>
      <div
        class="sc-gqjmRU sc-VigVT dvKSlR"
        data-testid="sidebarMetaItem"
      >
        MyLabel2
      </div>
    </div>
  </div>
</div>
`;

exports[`PropertyItems renders empty 1`] = `
<div>
  <div
    class="sc-EHOje ggEejq"
  >
    <h5
      class="sc-ifAKCX oCshM"
    >
      Property Keys
    </h5>
    <div
      class="sc-bZQynM hxqGOu"
    >
      <p>
        There are no properties in database
      </p>
    </div>
  </div>
</div>
`;

exports[`PropertyItems renders properties 1`] = `
<div>
  <div
    class="sc-EHOje ggEejq"
  >
    <h5
      class="sc-ifAKCX oCshM"
    >
      Property Keys
    </h5>
    <div
      class="sc-bZQynM hxqGOu"
    >
      <div
        class="sc-gqjmRU sc-fjdhpX diFcOZ"
        data-testid="sidebarMetaItem"
      >
        prop1
      </div>
      <div
        class="sc-gqjmRU sc-fjdhpX diFcOZ"
        data-testid="sidebarMetaItem"
      >
        prop2
      </div>
    </div>
  </div>
</div>
`;

exports[`RelationshipItems renders empty 1`] = `
<div>
  <div
    class="sc-EHOje ggEejq"
  >
    <h5
      class="sc-ifAKCX oCshM"
    >
      Relationship Types
    </h5>
    <div
      class="sc-bZQynM hxqGOu"
    >
      <p>
        No relationships in database
      </p>
    </div>
  </div>
</div>
`;

exports[`RelationshipItems renders relationshipTypes 1`] = `
<div>
  <div
    class="sc-EHOje ggEejq"
  >
    <h5
      class="sc-ifAKCX oCshM"
    >
      Relationship Types
    </h5>
    <div
      class="sc-bZQynM hxqGOu"
    >
      <div
        class="sc-gqjmRU sc-jTzLTM gcOkiq"
        data-testid="sidebarMetaItem"
      >
        *
      </div>
      <div
        class="sc-gqjmRU sc-jTzLTM gcOkiq"
        data-testid="sidebarMetaItem"
      >
        MY_TYPE
      </div>
      <div
        class="sc-gqjmRU sc-jTzLTM gcOkiq"
        data-testid="sidebarMetaItem"
      >
        MY_TYPE2
      </div>
    </div>
  </div>
</div>
`;
